tdf#89932 bullets and numbering position tab level-1

Fixed the problem of not showing the default values on level-1

Change-Id: I167694d090a6c4cd8064250837d290efabfad21c